# ppca-torch

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: ppca.ipynb  ppca_convergence.py  ppca_sampling.py  ppca_trainings.py  quickstart.py  trainings.ipynb
examples/ppca/: methods_convergence.py  methods_plot.py  missing_values.py  mnist_sampling.py  pca_ppca.py
examples/sampling/: ppca_sampling.py
examples/trainings/: trainings.py
notebooks/: mnist_mppca.ipynb  mppca.ipynb  pca_ppca.ipynb  svd_em_gd.ipynb
src/mppca/: __init__.py  _mppca.py
src/ppca/: __init__.py  _load_data.py  _pca.py  _ppca.py
